{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 21,
  "lineage": "a22ba91a-d948-f6a7-3fd9-ba482518d83b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:security-group/sg-0e7105faa74438e77",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e7105faa74438e77",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20230121053714698800000003",
            "name_prefix": "all_worker_management",
            "owner_id": "247434585159",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:security-group/sg-0da67f7450057cdb1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0da67f7450057cdb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20230121053713074700000001",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "247434585159",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:security-group/sg-072725a148ec42725",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-072725a148ec42725",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20230121053713074700000002",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "247434585159",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bea9de41eea1a58",
            "domain": "vpc",
            "id": "eipalloc-02bea9de41eea1a58",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-208-58-192.compute-1.amazonaws.com",
            "public_ip": "44.208.58.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:internet-gateway/igw-01bf16b4f9929cf12",
            "id": "igw-01bf16b4f9929cf12",
            "owner_id": "247434585159",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bea9de41eea1a58",
            "connectivity_type": "public",
            "id": "nat-017265178ba74eafa",
            "network_interface_id": "eni-037a44488729675c0",
            "private_ip": "10.0.101.101",
            "public_ip": "44.208.58.192",
            "subnet_id": "subnet-054011b940f78ec91",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06957e0c927d57aae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-017265178ba74eafa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06957e0c927d57aae",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01bf16b4f9929cf12",
            "id": "r-rtb-00463c170a240f9b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00463c170a240f9b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:route-table/rtb-06957e0c927d57aae",
            "id": "rtb-06957e0c927d57aae",
            "owner_id": "247434585159",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-private",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-private",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:route-table/rtb-00463c170a240f9b3",
            "id": "rtb-00463c170a240f9b3",
            "owner_id": "247434585159",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-public",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-public",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d38b678247d6ba9a",
            "route_table_id": "rtb-06957e0c927d57aae",
            "subnet_id": "subnet-03d441bb812f325f0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f434480f697d3ff",
            "route_table_id": "rtb-06957e0c927d57aae",
            "subnet_id": "subnet-098ca0326d45a7003"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016630756d774dfb5",
            "route_table_id": "rtb-00463c170a240f9b3",
            "subnet_id": "subnet-054011b940f78ec91"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d474a6f4e39631e2",
            "route_table_id": "rtb-00463c170a240f9b3",
            "subnet_id": "subnet-07abfe0b121a15460"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:subnet/subnet-03d441bb812f325f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d441bb812f325f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247434585159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-private-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "private-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-private-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "private-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:subnet/subnet-098ca0326d45a7003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098ca0326d45a7003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247434585159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-private-us-east-1b",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "private-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-private-us-east-1b",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "private-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:subnet/subnet-054011b940f78ec91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054011b940f78ec91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247434585159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-public-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "public-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-public-us-east-1a",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "public-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:subnet/subnet-07abfe0b121a15460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07abfe0b121a15460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247434585159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-public-us-east-1b",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "public-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc-public-us-east-1b",
              "Owner": "Rajesh",
              "Terraform": "true",
              "Type": "public-subnets",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f62097f45033d25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247434585159:vpc/vpc-01f62097f45033d25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ba96500f1d73ada",
            "default_route_table_id": "rtb-02257d85dd1a1173d",
            "default_security_group_id": "sg-02513967b110fc201",
            "dhcp_options_id": "dopt-3c939046",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f62097f45033d25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02257d85dd1a1173d",
            "owner_id": "247434585159",
            "tags": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            },
            "tags_all": {
              "Environment": "Rajesh-Capstone-project",
              "Name": "Rajesh-vpc",
              "Owner": "Rajesh",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared"
            }
          }
        }
      ]
    }
  ]
}